--- a/about-me.html
+++ b/about-me.html
@@ -11,5 +11,10 @@ scale=1.0">
   </head>
   <body>
     <h1>Kyle Durst</h1>
-  </body>
+    <p>I am a Software Engineering Student who enjoys working on computers and on cars. I have knowledge in coding language including: C#, C++ and Matlab. I am aiming for a Distinction in this Unit.</p>
+    <p>I have completed the following Units:
+        SIT107
+        SIT712
+    </p>
+    </body>
 </html>
