--- a/device-list.html
+++ b/device-list.html
@@ -29,5 +29,6 @@ scale=1.0">
     r.min.js"></script>
     <script
     src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  </body>
+    <script>src="app.js"</script>
+    </body>
 </html>
