ENHANCE: Add Code

--- a/about-me.html
+++ b/about-me.html
@@ -13,6 +13,19 @@ scale=1.0">
   <body>
     <h1>Kyle Durst</h1>
     <p>I am a Software Engineering Student who enjoys working on computers and on cars. I have knowledge in coding language including: C#, C++ and Matlab. I am aiming for a Distinction in this Unit.</p>
-    <p>I have completed the following Units: SIT107, SIT712, etc.</p>
+    <p>I have completed the following Units:</p>
+    <ul>
+        <li>SIT107</li>
+        <li>SIT172</li>
+        <li>SIT194</li>
+        <li>SIT199</li>
+        <li>SIT010</li>
+        <li>SEB101</li>
+        <li>SEJ010</li>
+        <li>SEJ101</li>
+        <li>SIT122</li>
+        <li>SIT192</li>
+        <li>STP010</li>
+    </ul>
     </body>
 </html>
