--- a/device-list.html
+++ b/device-list.html
@@ -4,12 +4,11 @@
   <head>
     <link rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
-    <script type="text/javascript" src="app.js"></script>
-    
+
     <meta charset="utf-8" />
     <meta name="description" content="A frontend dashboard for the
     TrackMe application" />
-    <meta name="author" content="devices" />
+    <meta name="author" content="Kyle" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>TrackMe</title>
   </head>
@@ -27,12 +26,13 @@
          <tbody></tbody>
         </table>
     </div>
-
+    
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script
     src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
       <script
     src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="app.js"></script>
   </body>
 
 </html>
